--- a/app/views/dashboard/index.hbs
+++ b/app/views/dashboard/index.hbs
@@ -4,20 +4,18 @@
 
 
 <div class="row">
-  <div class="request-new col-lg-6">
+  <div class="request-new grid-tile col-lg-6">
     {{> requests/new}}
   </div>
 
-  <div class="col-lg-3">
-    Stats box
+ <div class="requests-list grid-tile col-lg-6">
+    {{> requests/index}}
   </div>
 
 </div>
 
 <div class="row">
- <div class="requests-list col-lg-6">
-    {{> requests/index}}
-  </div>
+
 </div>
 
 
