New styling of requests

--- a/app/views/dashboard/index.hbs
+++ b/app/views/dashboard/index.hbs
@@ -1,22 +1,11 @@
 
 <div class="container dashboard">
 
+  {{> requests/index}}
 
-
-<div class="row">
-  <div class="request-new grid-tile col-lg-6">
+  <div class="preview">
     {{> requests/new}}
   </div>
-
- <div class="requests-list grid-tile col-lg-6">
-    {{> requests/index}}
-  </div>
-
-</div>
-
-<div class="row">
-
-</div>
 
 
 </div>
