--- a/app/views/includes/header.hbs
+++ b/app/views/includes/header.hbs
@@ -1,7 +1,7 @@
 
 <header class="global-header">
 
-  <div class="navbar navbar-inverse navbar-top">
+  <div class="navbar navbar-static-top navbar-inverse">
 
     <a class="navbar-brand" href="/dashboard">Helpmate</a>
 
