--- a/app/assets/stylesheets/_requests.scss
+++ b/app/assets/stylesheets/_requests.scss
@@ -1,5 +1,8 @@
 .new-request-form {
 
+  h3 {
+    margin: 0 0 20px 0;
+  }
 
   textarea {
     min-height: 250px;
@@ -10,4 +13,89 @@
   background: #fff;
   padding: 20px;
   margin: 40px;
+}
+
+
+.dashboard {
+
+  height: 100%;
+  background: none;
+
+  .requests-list {
+    background: #fff;
+    width: 350px;
+    float: left;
+    position: absolute;
+    left: 0;
+    top: 50px;
+    bottom: 0;
+    overflow: auto;
+    border-right: 1px solid #ccc;
+
+    .title {
+      padding-left: 20px;
+    }
+
+    ol {
+      margin: 0;
+      padding: 0;
+    }
+
+    li {
+      display: block;
+      list-style: none;
+      height: 50px;
+      line-height: 50px;
+      border-bottom: 1px dashed #ccc;
+      padding: 0 20px 20px 20px;
+      margin: 0;
+
+      &:hover {
+        background: #bebebe;
+      }
+    }
+  }
+
+  .preview {
+    position: absolute;
+    top: 50px;
+    bottom: 0;
+    left: 350px;
+    right: 0;
+    overflow: auto;
+    padding: 20px;
+  }
+
+  .request-show {
+    background: #fff;
+    padding: 20px;
+
+    > header {
+      border-bottom: 1px dashed #000;
+      margin-bottom: 30px;
+      padding: 0 0 20px 0;
+
+      h1 {
+        margin: 0 0 10px 0;
+      }
+    }
+
+    .comments {
+
+      ol {
+        margin: 0;
+        padding: 0;
+        margin-bottom: 40px;
+      }
+
+      li {
+        padding: 20px;
+        list-style: none;
+        border-bottom: 1px dashed #ccc;
+      }
+    }
+  }
+
+
+
 }
