--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -274,14 +274,96 @@ body {
   width: 100%;
 }
 
-/* line 4, ../../app/assets/stylesheets/_requests.scss */
+/* line 3, ../../app/assets/stylesheets/_requests.scss */
+.new-request-form h3 {
+  margin: 0 0 20px 0;
+}
+/* line 7, ../../app/assets/stylesheets/_requests.scss */
 .new-request-form textarea {
   min-height: 250px;
 }
 
-/* line 9, ../../app/assets/stylesheets/_requests.scss */
+/* line 12, ../../app/assets/stylesheets/_requests.scss */
 .content-request {
   background: #fff;
   padding: 20px;
   margin: 40px;
+}
+
+/* line 19, ../../app/assets/stylesheets/_requests.scss */
+.dashboard {
+  height: 100%;
+  background: none;
+}
+/* line 24, ../../app/assets/stylesheets/_requests.scss */
+.dashboard .requests-list {
+  background: #fff;
+  width: 350px;
+  float: left;
+  position: absolute;
+  left: 0;
+  top: 50px;
+  bottom: 0;
+  overflow: auto;
+  border-right: 1px solid #ccc;
+}
+/* line 35, ../../app/assets/stylesheets/_requests.scss */
+.dashboard .requests-list .title {
+  padding-left: 20px;
+}
+/* line 39, ../../app/assets/stylesheets/_requests.scss */
+.dashboard .requests-list ol {
+  margin: 0;
+  padding: 0;
+}
+/* line 44, ../../app/assets/stylesheets/_requests.scss */
+.dashboard .requests-list li {
+  display: block;
+  list-style: none;
+  height: 50px;
+  line-height: 50px;
+  border-bottom: 1px dashed #ccc;
+  padding: 0 20px 20px 20px;
+  margin: 0;
+}
+/* line 53, ../../app/assets/stylesheets/_requests.scss */
+.dashboard .requests-list li:hover {
+  background: #bebebe;
+}
+/* line 59, ../../app/assets/stylesheets/_requests.scss */
+.dashboard .preview {
+  position: absolute;
+  top: 50px;
+  bottom: 0;
+  left: 350px;
+  right: 0;
+  overflow: auto;
+  padding: 20px;
+}
+/* line 69, ../../app/assets/stylesheets/_requests.scss */
+.dashboard .request-show {
+  background: #fff;
+  padding: 20px;
+}
+/* line 73, ../../app/assets/stylesheets/_requests.scss */
+.dashboard .request-show > header {
+  border-bottom: 1px dashed #000;
+  margin-bottom: 30px;
+  padding: 0 0 20px 0;
+}
+/* line 78, ../../app/assets/stylesheets/_requests.scss */
+.dashboard .request-show > header h1 {
+  margin: 0 0 10px 0;
+}
+/* line 85, ../../app/assets/stylesheets/_requests.scss */
+.dashboard .request-show .comments ol {
+  margin: 0;
+  padding: 0;
+  margin-bottom: 40px;
+}
+/* line 91, ../../app/assets/stylesheets/_requests.scss */
+.dashboard .request-show .comments li {
+  padding: 20px;
+  list-style: none;
+  border-bottom: 1px dashed #ccc;
 }
