New homepage styling and content

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -1,13 +1,13 @@
 @import "compass";
 
 body {
-  font-family: 'Open Sans', sans-serif;
-  font-weight: 400;
-  background: #ecebe8;
+  font-family: "freight-sans-pro";
+  font-weight:book;
 }
 
 .sans {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "freight-sans-pro";
+  font-weight:light;
 }
 
 .grid-tile {
