--- a/app/views/home/index.hbs
+++ b/app/views/home/index.hbs
@@ -9,14 +9,14 @@
     </nav>
     <span class="gradient"></span>
     <div class="position">
-      <h1 class="sans">Helpmate</h1>
+      <img src="/img/helpmate_logo.png" alt="Helpmate" width="139" height="165" />
       <h2 class="sans">
-        <span class="make">Personal assistants</span>
-        <span class="publish">for</span>
-        <span class="share">everyone.</span>
+        <span class="make">Hvad ville du gøre med</span><br />
+        <span class="publish">en ekstra time</span><br />
+        <span class="share">om dagen?</span>
       </h2>
     </div>
-    <a href="#content" class="btn btn-success btn-large">Get started</a>
+    <a href="#content" class="btn btn-success btn-large">Find ud af mere</a>
   </section>
 </header>
 
@@ -24,23 +24,23 @@
   <ol>
     <li>
       <div class="detail">
-        <h2>Lorem ipsum dolor sit amet,</h2>
-        <p>Gravida. Curabitur eget ad porttitor auctor faucibus commodo mollis. Convallis nam. Risus morbi suscipit. Integer mus amet duis enim eros eu consequat aenean mattis. Odio, pulvinar. Et diam platea nibh pharetra eros augue in Placerat malesuada sollicitudin varius.</p>
-        <p>Accumsan. Platea. Rutrum ridiculus. Aliquam aptent aliquet orci natoque venenatis convallis velit sollicitudin phasellus luctus, libero id enim tincidunt Sapien primis ante proin leo inceptos dapibus vehicula Viverra eget. Id ridiculus pede rhoncus.</p>
+        <img src="/img/time.png" class="pull-right" width="128" height="128" /><h2>Mere tid, mere lykke</h2>
+        <p>I dag har 40% af Københavns familier en rengøringshjælp. Det var for ganske få årtier siden en luksus for overklassen, men i dag er det allemandseje fordi det frigører vigtig tid.</p>
+        <p>Tænk hvis du kunne frigøre endnu mere tid, ved at udlicitere alle de andre opgaver du ikke har tid til at løse. Tænk på hvad du kunne bruge al den tid på.</p>
       </div>
     </li>
     <li>
       <div class="detail">
-        <h2>Lorem ipsum dolor sit amet,</h2>
-        <p>Gravida. Curabitur eget ad porttitor auctor faucibus commodo mollis. Convallis nam. Risus morbi suscipit. Integer mus amet duis enim eros eu consequat aenean mattis. Odio, pulvinar. Et diam platea nibh pharetra eros augue in Placerat malesuada sollicitudin varius.</p>
-        <p>Accumsan. Platea. Rutrum ridiculus. Aliquam aptent aliquet orci natoque venenatis convallis velit sollicitudin phasellus luctus, libero id enim tincidunt Sapien primis ante proin leo inceptos dapibus vehicula Viverra eget. Id ridiculus pede rhoncus.</p>
+        <img src="/img/assistant.png" class="pull-right" width="128" height="128" /><h2>Helpmate er din personlige assistent</h2>
+        <p>Tænk hvis du havde en personlig assistent eller sekretær til at løse alle de opgaver du ikke har tid til. Eller lyst til, for den sags skyld.</p>
+		<p>Vi giver dig en personlig assistent som du kan skrive til, ringe til eller sms'e til døgnet rundt, hver gang du har en opgave der trænger til at blive løst.</p>
       </div>
     </li>
     <li>
       <div class="detail">
-        <h2>Lorem ipsum dolor sit amet,</h2>
-        <p>Gravida. Curabitur eget ad porttitor auctor faucibus commodo mollis. Convallis nam. Risus morbi suscipit. Integer mus amet duis enim eros eu consequat aenean mattis. Odio, pulvinar. Et diam platea nibh pharetra eros augue in Placerat malesuada sollicitudin varius.</p>
-        <p>Accumsan. Platea. Rutrum ridiculus. Aliquam aptent aliquet orci natoque venenatis convallis velit sollicitudin phasellus luctus, libero id enim tincidunt Sapien primis ante proin leo inceptos dapibus vehicula Viverra eget. Id ridiculus pede rhoncus.</p>
+        <img src="/img/infinity.png" class="pull-right" width="128" height="128" /><h2>Mulighederne er uendelige</h2>
+        <p>Din Helpmate kan hente dine pakker på posthuset. Booke dig et hotelværelse. Skrive dit barn op til børnehave. Lave en aftale med fire af dine venner om at drikke en øl. Få nogen til at komme forbi og pudse dine vinduer. Finde en god tandlæge og booke dig en tid. Læse korrektur på dine mails. Skrive visitkort ind i din adressebog. Ringe til deltagerne på dit møde i morgen og bekræfte tid og sted. Sende blomster til din mor. Scanne din fysiske post ind til Evernote. Sammensætte en madplan på baggrund af hvad Nemlig.com har tilbud på. Finde et band der kan spille til den næste firmafest.</p>
+        <p>Muligheder for hvad du kan slippe for at lave er næsten uendelige.</p>
       </div>
     </li>
   </ol>
