--- a/app/assets/stylesheets/_home.scss
+++ b/app/assets/stylesheets/_home.scss
@@ -10,14 +10,7 @@
     background-size:cover;
     background-position:50% 50%;
     min-height:25em;
-
-    &.img-1 {
-      background-image:url('../img/splash-1.jpg');
-    }
-
-    &.img-2 {
-      background-image:url('../img/splash-2.jpg');
-    }
+    background-image:url('../img/splash-2.jpg');
 
     .gradient{
       display:block;
@@ -46,12 +39,12 @@
     }
 
     .position{
-      width: 500px;
+      width: 300px;
       height:20em;
       position:absolute;
       top:50%;
       left:50%;
-      margin:-10em 0 0 -250px;
+      margin:-15em 0 0 -150px;
       z-index:1;
     }
 
@@ -72,7 +65,6 @@
       width:100%;
       text-shadow: 0 1px 0 rgba(0,0,0,.3);
       margin-top:1em;
-      white-space:nowrap;
 
       span {
         opacity: 0;
@@ -106,6 +98,7 @@
       width: 10em;
       margin: 1em 0 0 -5em;
       z-index: 1;
+      font-weight:bold;
     }
   }
 }
@@ -113,14 +106,20 @@
 
 .content-home {
   padding:2em 0 0 0;
-  max-width: 800px;
+  max-width: 600px;
   margin:0 auto;
   padding:1em;
 
   a{
     color: #43ac74;
   }
-
+  
+  .btn{
+    color:#ffffff;
+	margin-left: 40%;
+	width: 10em;
+  }
+  
   ol{
     display:block;
     counter-reset: item;
@@ -141,7 +140,8 @@
         line-height:1em;
         text-transform:uppercase;
         color: #333;
-        font-weight:700;
+        font-weight:light;
+        font-family: "freight-sans-pro";
       }
 
       p{
