--- a/app/views/layouts/layout.hbs
+++ b/app/views/layouts/layout.hbs
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="/stylesheets/lib/bootstrap.css"></link>
     <link rel="stylesheet" href="/stylesheets/app.css"></link>
     <link rel="shortcut icon", href="/favicon.png"  type="image/png"></link>
+    <script type="text/javascript" src="//use.typekit.net/ihn0fsd.js"></script>
+	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
 <body>
 
