--- a/app/views/layouts/layout.hbs
+++ b/app/views/layouts/layout.hbs
@@ -9,6 +9,8 @@
     <link rel="shortcut icon", href="/favicon.png"  type="image/png"></link>
     <script type="text/javascript" src="//use.typekit.net/ihn0fsd.js"></script>
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<script type="tex  t/javascript">try{Typekit.load();}catch(e){}</script>
 </head>
 <body>
 
