--- a/app/views/home/index.hbs
+++ b/app/views/home/index.hbs
@@ -45,3 +45,13 @@
     </li>
   </ol>
 </div>
+
+
+// When ready...
+window.addEventListener("load",function() {
+  // Set a timeout...
+  setTimeout(function(){
+    // Hide the address bar!
+    window.scrollTo(0, 1);
+  }, 0);
+});
