--- a/app/views/home/index.hbs
+++ b/app/views/home/index.hbs
@@ -46,7 +46,7 @@
   </ol>
 </div>
 
-
+<script>
 // When ready...
 window.addEventListener("load",function() {
   // Set a timeout...
@@ -55,3 +55,4 @@ window.addEventListener("load",function() {
     window.scrollTo(0, 1);
   }, 0);
 });
+</script>
