--- a/app/views/home/index.hbs
+++ b/app/views/home/index.hbs
@@ -1,5 +1,7 @@
 <header class="home-intro">
-  <section class="banner">
+
+  <section class="welcome full-bg-banner">
+    <span class="gradient"></span>
     <nav>
       <ul>
         <li>
@@ -7,8 +9,8 @@
         </li>
       </ul>
     </nav>
-    <span class="gradient"></span>
-    <div class="position">
+
+    <div class="info">
       <img src="/img/helpmate_logo.png" alt="Helpmate" width="139" height="165" />
       <h2 class="sans">
         <span class="make">Hvad ville du gøre med</span><br />
@@ -16,8 +18,10 @@
         <span class="share">om dagen?</span>
       </h2>
     </div>
-    <a href="#content" class="btn btn-success btn-large">Find ud af mere</a>
+    <a href="#content" class="btn btn-success btn-large read-more-button">Find ud af mere</a>
   </section>
+
+
 </header>
 
 <div class="content content-home" id="content">
@@ -44,6 +48,11 @@
       </div>
     </li>
   </ol>
+
+  <div class="text-center">
+    <a href="/soon" class="btn btn-success btn-large">Kom igang!</a>
+  </div>
+
 </div>
 
 <script>
