--- a/app/assets/stylesheets/_login.scss
+++ b/app/assets/stylesheets/_login.scss
@@ -1,20 +1,10 @@
-.login {
+.login .login-box {
   @include border-radius(10px);
-  width: 280px;
-  margin: 0 auto;
   background: #fff;
   box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
-  padding: 20px;
 
-  height: 305px;
-  width: 280px;
-
-  position: absolute;
-  top: 50%;
-  left: 50%;
-
-  margin: -150px 0 0 -140px;
-
+  height: 85px;
+  width: 295px;
 
   .button {
     font-family: "Helvetica Neue","Lucida Grande",sans-serif;
@@ -26,11 +16,9 @@
     box-shadow: none;
     border: 0;
     display: inline-block;
-    margin: 0 0 0 5px;
     padding: 0 12px 0 20px;
 
     position: relative;
-    left: -8px;
     line-height: 44px;
     height: 44px;
     background: url(../img/facebook-sprite.png) 0 -25px;
@@ -40,8 +28,12 @@
 
   h3 {
     text-align: center;
+    margin-top: 15px;
     margin-bottom: 20px;
     font-size: 14px;
+    color: #333;
+
+    display: none;
   }
 
   .fb {
@@ -52,12 +44,15 @@
     padding-right: 20px;
     text-align: center;
     text-shadow: 0 -1px 0 #38456F;
-    margin-top: 20px;
     -webkit-font-smoothing: antialiased;
   }
 
   .btn {
     width: 100%;
+  }
+
+  form {
+    display: none;
   }
 
 }
