--- a/app/views/users/login.hbs
+++ b/app/views/users/login.hbs
@@ -1,19 +1,27 @@
-<div class="login">
+<section class="login">
+  <section class="full-bg-banner">
+    <span class="gradient"></span>
 
-  <a href="/auth/facebook" class="button fb">Log in with Facebook<span></span></a>
+    <div class="info login-box">
+      <a href="/auth/facebook" class="button fb">Log in with Facebook<span></span></a>
 
-  <h3>or</h3>
+      <h3>or</h3>
 
-  <form action="/users/session" method="post">
-    <fieldset>
-      <div class="form-group">
-        <input type="text" class="form-control" name="email" id="email" placeholder="Enter email">
-      </div>
-      <div class="form-group">
-        <input type="password" class="form-control" name="password" id="password" placeholder="Password">
-      </div>
-      <button type="submit" class="btn btn-success">Login</button>
-    </fieldset>
-  </form>
+      <form action="/users/session" method="post">
+        <fieldset>
+          <div class="form-group">
+            <input type="text" class="form-control" name="email" id="email" placeholder="Enter email">
+          </div>
+          <div class="form-group">
+            <input type="password" class="form-control" name="password" id="password" placeholder="Password">
+          </div>
+          <button type="submit" class="btn btn-success">Login</button>
+        </fieldset>
+      </form>
 
-</div>
+    </div>
+  </section>
+</section>
+
+
+
