--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -154,7 +154,7 @@ body {
 .home-intro .welcome .info,
 .login .welcome .info {
   text-align: center;
-  width: 400px;
+  width: auto;
   height: 350px;
   top: -80px;
 }
