--- a/app/assets/stylesheets/_soon.scss
+++ b/app/assets/stylesheets/_soon.scss
@@ -5,7 +5,8 @@
     box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
 
     height: 250px;
-    width: 600px;
+    max-width: 600px;
+    width: 100%;
 
     h2{
       margin: 0;
