New layout of soon page.

--- a/app/views/home/soon.hbs
+++ b/app/views/home/soon.hbs
@@ -3,12 +3,12 @@
   <div class="full-bg-banner">
     <span class="gradient"></span>
 
-    <div class="info">
+    <div class="page-box">
 
-      <h2>Vi er på vej!</h2>
-
-      <p>In odio velit, placerat vitae sapien a, pretium luctus lectus. Etiam non est sed neque tincidunt cursus. Sed non leo consequat, ornare lectus gravida, scelerisque justo. Aliquam et tincidunt dui, ac dictum neque. Integer id mauris ut nibh tempor sagittis. Quisque tincidunt vitae leo non accumsan. Suspendisse potenti. Quisque semper velit justo, id tincidunt lectus porta a. Phasellus et ante lobortis nunc iaculis facilisis.</p>
-
+      <div class="text">
+        <h2>Vi er på vej!</h2>
+        <p>In odio velit, placerat vitae sapien a, pretium luctus lectus. Etiam non est sed neque tincidunt cursus. Sed non leo consequat, ornare lectus gravida, scelerisque justo. Aliquam et tincidunt dui, ac dictum neque. Integer id mauris ut nibh tempor sagittis. Quisque tincidunt vitae leo non accumsan. Suspendisse potenti. Quisque semper velit justo, id tincidunt lectus porta a. Phasellus et ante lobortis nunc iaculis facilisis.</p>
+      </div>
     </div>
 
   </div>
