--- a/app/assets/stylesheets/_soon.scss
+++ b/app/assets/stylesheets/_soon.scss
@@ -1,14 +1,22 @@
 .content-soon {
 
-  .info {
+  .page-box {
+    position: relative;
+    top: 100px;
+
     background: #fff;
     box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
 
-    height: 250px;
-    max-width: 600px;
+    padding: 25px;
     width: 100%;
 
-    h2{
+    .text {
+      max-width: 600px;
+      margin: 0 auto;
+      text-align: left;
+    }
+
+    h2 {
       margin: 0;
       font-size: 24px;
       line-height:1em;
@@ -18,7 +26,7 @@
       font-family: "freight-sans-pro";
     }
 
-    p{
+    p {
       font-size: 16px;
       line-height:1.4em;
       color: #999;
