--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -317,15 +317,22 @@ body {
 }
 
 /* line 3, ../../app/assets/stylesheets/_soon.scss */
-.content-soon .info {
+.content-soon .page-box {
+  position: relative;
+  top: 100px;
   background: #fff;
   box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
-  height: 250px;
-  max-width: 600px;
+  padding: 25px;
   width: 100%;
 }
-/* line 11, ../../app/assets/stylesheets/_soon.scss */
-.content-soon .info h2 {
+/* line 13, ../../app/assets/stylesheets/_soon.scss */
+.content-soon .page-box .text {
+  max-width: 600px;
+  margin: 0 auto;
+  text-align: left;
+}
+/* line 19, ../../app/assets/stylesheets/_soon.scss */
+.content-soon .page-box h2 {
   margin: 0;
   font-size: 24px;
   line-height: 1em;
@@ -334,8 +341,8 @@ body {
   font-weight: light;
   font-family: "freight-sans-pro";
 }
-/* line 21, ../../app/assets/stylesheets/_soon.scss */
-.content-soon .info p {
+/* line 29, ../../app/assets/stylesheets/_soon.scss */
+.content-soon .page-box p {
   font-size: 16px;
   line-height: 1.4em;
   color: #999;
