--- a/app/views/includes/header.hbs
+++ b/app/views/includes/header.hbs
@@ -10,6 +10,9 @@
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{userName}} <b class="caret"></b></a>
         <ul class="dropdown-menu">
           <li><a href="/settings">Settings</a></li>
+          {{#if isAdmin}}
+            <li><a href="/admin">Admin</a></li>
+          {{/if}}
           <li><a href="/logout">Logout</a></li>
         </ul>
       </li>
