--- a/app/assets/stylesheets/_home.scss
+++ b/app/assets/stylesheets/_home.scss
@@ -1,6 +1,23 @@
 .home-intro,
 .login {
 
+  .btn-outline {
+    font-size: inherit;
+    font-weight: 500;
+    color: #FFF;
+    background-color: rgba(0, 0, 0, 0);
+    border-color: #FFF;
+    border-color: rgba(255, 255, 255, 0.5);
+    transition: all .1s ease-in-out;
+
+    &:hover,
+    &:active {
+      color: #22262e;
+      background-color: #FFF;
+      border-color: #FFF;
+    }
+  }
+
   .welcome {
     color: #F9F9F9;
 
