--- a/app/assets/stylesheets/lib/_sidebar.scss
+++ b/app/assets/stylesheets/lib/_sidebar.scss
@@ -4,7 +4,7 @@
     float: left;
     position: absolute;
     left: 0;
-    top: 50px;
+    top: 0;
     bottom: 0;
     overflow: auto;
     border-right: 1px solid #ccc;
