--- a/app/views/admin/index.hbs
+++ b/app/views/admin/index.hbs
@@ -1,13 +1,5 @@
 
-
-
-<div class="user-list sidebar">
-
-
-</div>
-
-
-<div class="content-box">
+<div class="content-admin content-fixed">
 
   <h3>Admin</h3>
 
