--- a/app/views/home/index.hbs
+++ b/app/views/home/index.hbs
@@ -5,7 +5,7 @@
     <nav>
       <ul>
         <li>
-          <a href="/login">Login</a>
+          <a class="btn btn-outline" href="/login">Login</a>
         </li>
       </ul>
     </nav>
@@ -18,7 +18,7 @@
         <span class="share">om dagen?</span>
       </h2>
     </div>
-    <a href="#content" class="btn btn-success btn-large read-more-button">Find ud af mere</a>
+    <a href="#content" class="btn btn-success read-more-button">Find ud af mere</a>
   </section>
 
 
@@ -50,7 +50,7 @@
   </ol>
 
   <div class="text-center">
-    <a href="/soon" class="btn btn-success btn-large">Kom igang!</a>
+    <a href="/soon" class="btn btn-success">Kom igang!</a>
   </div>
 
 </div>
