--- a/app/views/home/welcome.hbs
+++ b/app/views/home/welcome.hbs
@@ -1,19 +1,13 @@
 
-<div class="container dashboard">
+<div class="content-fixed">
 
-  {{>navigation}}
+  <h3>Velkommen til Helpmate!</h3>
 
-  <div class="content-box">
-    <h3>Velkommen til Helpmate!</h3>
+  <img src="http://placehold.it/700x250" class="img-rounded">
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac cursus quam, non dignissim velit. Quisque iaculis dapibus lectus non fermentum. Suspendisse ultrices diam at tincidunt cursus. Curabitur sed mauris euismod, vehicula felis quis, laoreet nisi. Cras ut massa eleifend, dapibus tortor eu, tempus orci. Donec a porta lectus. Etiam non sodales metus. Nam pharetra tortor ut semper suscipit. Nulla facilisi. Praesent lectus magna, posuere quis mollis porta, semper sit amet justo. Donec ac sapien pretium, vehicula risus sed, blandit erat. Interdum et malesuada fames ac ante ipsum primis in faucibus. Maecenas feugiat erat sed vulputate porttitor. Ut eleifend placerat eros non congue. Ut dignissim condimentum porta.</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac cursus quam, non dignissim velit. Quisque iaculis dapibus lectus non fermentum. Suspendisse ultrices diam at tincidunt cursus. Curabitur sed mauris euismod, vehicula felis quis, laoreet nisi. Cras ut massa eleifend, dapibus tortor eu, tempus orci. Donec a porta lectus. Etiam non sodales metus. Nam pharetra tortor ut semper suscipit. Nulla facilisi. Praesent lectus magna, posuere quis mollis porta, semper sit amet justo. Donec ac sapien pretium, vehicula risus sed, blandit erat. Interdum et malesuada fames ac ante ipsum primis in faucibus. Maecenas feugiat erat sed vulputate porttitor. Ut eleifend placerat eros non congue. Ut dignissim condimentum porta.</p>
 
-    <img src="http://placehold.it/700x250" class="img-rounded">
-
-
-    <p>Kom igang med at oprette dine foerste opgave! Goer det ved at klikke opgaver ude i hoere side.</p>
-  </div>
-
+  <a class="btn btn-lg btn-success" href="/dashboard">Kom igang!</a>
 
 </div>
 
