--- a/app/views/includes/settings/navigation.hbs
+++ b/app/views/includes/settings/navigation.hbs
@@ -1,11 +1,6 @@
-  <div class="sidebar">
-
-    <div class="list-group">
-      <a class="list-group-item" href="/settings/">Account</a>
-      <a class="list-group-item" href="/settings/subscription">Subscription</a>
-      <a class="list-group-item" href="/settings/billing">Billing</a>
-      <a class="list-group-item" href="/settings/preferences">Preferences</a>
-    </div>
-
-
-  </div>
+  <nav class="settings-nav">
+    <a href="/settings/">Account</a>
+    <a href="/settings/subscription">Subscription</a>
+    <a href="/settings/billing">Billing</a>
+    <a href="/settings/preferences">Preferences</a>
+  </nav>
