--- a/app/views/settings/index.hbs
+++ b/app/views/settings/index.hbs
@@ -1,10 +1,7 @@
-
-<div class="settings">
+<div class="content-fixed settings">
 
   {{>settings/navigation}}
-
-  <div class="content-box">
-    <h3>Account settings</h3>
+  <h3>Account settings</h3>
 
   <form action="/settings" method="post">
     <input type="hidden" name="_csrf" value="{{csrf_token}}" />
@@ -110,12 +107,8 @@
       </div>
     </div>
 
-
-
-
   </form>
 
-  </div>
 </div>
 
 
