--- a/app/views/settings/preferences.hbs
+++ b/app/views/settings/preferences.hbs
@@ -1,9 +1,7 @@
-<div class="settings">
+<div class="content-fixed settings">
 
   {{>settings/navigation}}
 
-  <div class="content-box">
-    <h3>Preferences</h3>
+  <h3>Preferences</h3>
 
-  </div>
 </div>
