Added missing sans font for headers.

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -8,6 +8,11 @@ body {
   }
 }
 
+.sans {
+  font-family: "freight-sans-pro";
+  font-weight:light;
+}
+
 @import "lib/bootstrap";
 @import "lib/bootstrap-glyphicons";
 
