--- a/app/assets/stylesheets/_login.scss
+++ b/app/assets/stylesheets/_login.scss
@@ -1,9 +1,12 @@
-.login .login-box {
-  background: #fff;
-  box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+.modal-dialog {
+  width: 400px;
+}
 
-  height: 85px;
-  width: 295px;
+.login-box {
+  background: #fff;
+
+  width: 255px;
+  margin: 40px auto;
 
   .button {
     font-family: "Helvetica Neue","Lucida Grande",sans-serif;
@@ -31,8 +34,6 @@
     margin-bottom: 20px;
     font-size: 14px;
     color: #333;
-
-    display: none;
   }
 
   .fb {
@@ -48,10 +49,6 @@
 
   .btn {
     width: 100%;
-  }
-
-  form {
-    display: none;
   }
 
 }
