Use english for now.

--- a/app/views/includes/comments/new.hbs
+++ b/app/views/includes/comments/new.hbs
@@ -8,10 +8,10 @@
     <fieldset>
 
       <div class="form-group">
-        <textarea class="form-control" name="content" id="content" placeholder="Din kommentar til denne opgave"></textarea>
+        <textarea class="form-control" name="content" id="content" placeholder="Your comment"></textarea>
       </div>
 
-      <button type="submit" class="btn btn-success pull-right">Opret kommentar</button>
+      <button type="submit" class="btn btn-success pull-right">Add comment</button>
     </fieldset>
   </form>
 
