--- a/app/views/includes/navigation.hbs
+++ b/app/views/includes/navigation.hbs
@@ -4,8 +4,8 @@
 
     <div class="list-group">
       <a href="/welcome"><span class="glyphicon glyphicon-home"></span> Home</a>
-      <a href="/dashboard"><span class="glyphicon glyphicon-list-alt"></span> Opgaver</a>
-      <a href="/settings"><span class="glyphicon glyphicon-wrench"></span> Indstillinger</a>
+      <a href="/dashboard"><span class="glyphicon glyphicon-list-alt"></span> Your requests</a>
+      <a href="/settings"><span class="glyphicon glyphicon-wrench"></span> Settings</a>
     </div>
 
     <div class="list bottom">
