--- a/app/views/includes/requests/index.hbs
+++ b/app/views/includes/requests/index.hbs
@@ -2,7 +2,7 @@
 
 <div class="requests-list sidebar">
 
-  <h3 class="title">Dine opgaver</h3>
+  <h3 class="title">Your requests</h3>
 
   {{#if requests.length}}
     <div class="list-group">
