--- a/app/views/requests/show.hbs
+++ b/app/views/requests/show.hbs
@@ -18,7 +18,7 @@
         <p>{{{nl2br request.content}}}</p>
       </div>
 
-      <h3>Kommentarer</h3>
+      <h3>Comments</h3>
 
       <div class='comments'>
       {{#if request.comments.length}}
